<resources>
    <string name="app_name">Login Page</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_access_your_account">Login to access your account</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_mail">Enter your mail</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="request_otp">Request OTP</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="or_sign_in_with">Or Sign in with</string>
</resources>