<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textColor="@color/lightBlack"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/login_to_access_your_account"
        android:textColor="@color/lightGrey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/multipleButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_8"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintBottom_toTopOf="@id/emailName">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/emailButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_7"
            android:fontFamily="@font/poppins"
            android:text="@string/email"
            android:textAllCaps="false"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/PhoneNumberButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:background="@drawable/rectangle_7"
            android:fontFamily="@font/poppins"
            android:text="@string/phone_number"
            android:textAllCaps="false"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/emailButton"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/emailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins"
        android:text="@string/email"
        android:textColor="@color/lightGrey"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/emailText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/multipleButtons"
        app:layout_constraintTop_toBottomOf="@id/multipleButtons" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_3"
        android:fontFamily="@font/poppins"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_mail"
        android:textColor="@color/lightBlack"
        android:textSize="16sp"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@id/multipleButtons"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailName"
        app:layout_constraintTop_toBottomOf="@+id/multipleButtons"
        app:layout_constraintBottom_toTopOf="@id/passwordText"/>

    <TextView
        android:id="@+id/passwordName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins"
        android:text="@string/password"
        android:textColor="@color/lightGrey"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/emailText"
        app:layout_constraintTop_toBottomOf="@id/emailText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@id/emailText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/passwordName"
        app:layout_constraintTop_toBottomOf="@+id/emailText"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false"
        app:passwordToggleTint="@color/lightGrey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins"
            android:inputType="textPassword"
            android:background="@drawable/rectangle_3"
            android:textColor="@color/lightBlack"
            android:hint="@string/enter_password"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/frame_5"
        android:fontFamily="@font/poppins"
        android:text="@string/request_otp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/passwordText"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/passwordText"
        app:layout_constraintTop_toBottomOf="@+id/passwordText"
        app:layout_constraintBottom_toTopOf="@+id/signin"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/facebookButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/facebook"
        android:drawableStart="@drawable/vector"
        android:fontFamily="@font/poppins"
        android:padding="20dp"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textColor="#222222"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/main"
        app:layout_constraintStart_toEndOf="@+id/googleButton"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/googleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/facebook"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textColor="#222222"
        android:drawableStart="@drawable/icongoogle"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/main"
        app:layout_constraintBottom_toBottomOf="@+id/main"
        app:layout_constraintHorizontal_bias="0"
        android:fontFamily="@font/poppins"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/or_sign_in_with"
        android:textColor="@color/lightGrey"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/googleButton"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />
</androidx.constraintlayout.widget.ConstraintLayout>
